Ensure highlight colour is of correct contrast

--- a/assets/stylesheets/trumps/_utility.scss
+++ b/assets/stylesheets/trumps/_utility.scss
@@ -27,6 +27,7 @@
 }
 
 .u-highlight {
+  color: $text-colour;
   background-color: $yellow-25;
 }
 
